styles/style.css
/* Styles primarily for home page and general-use */
* {
  font-family: "Roboto Condensed", sans-serif;
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: bold;
  color: #fff;
}

#wolf-logo {
  height: 45px;
  filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(156deg)
    brightness(108%) contrast(102%) drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.75));
}

.main-title {
  font-size: 3.75rem;
  padding-top: 0px !important; /* To move the text up a little */
}

.sub-title {
  font-size: 2.5rem;
}

.navbar {
  text-transform: uppercase;
  background-image: linear-gradient(#3a424fbf, #3a424f80, #3a424f05);
}

 .navbar-dark .navbar-nav .nav-link{ /*Override bootstrap nav-item colors */
  color: rgba(255, 255, 255, 0.787);
}

.nav-item {
  margin-left: 3rem !important; /* Add more space between nav items */
  margin-right: 3rem !important; /* Use 1.7rem with admissions tab, 3rem without it*/
  font-size: 17px;
  text-shadow: 1px 1px #000;
}

.active {
  font-weight: 900 !important;
  font-weight: bold !important;
  color: #fff !important;
}

.nav-link:hover {
  color: #ffffff !important; /* override bootstrap highlighting */
}

#intro {
  height: 100vh;
  background: url("../img/campus_aerial.jpg") no-repeat center center fixed;
}

.title {
  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.5);
}

.who-we-are-box{
  box-shadow: 3px 3px 15px 1px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

#who-we-are {
  font-size: 2.75rem;
}

#who-we-are-text {
  font-size: 1.25rem;
}

.pillars {
  background-color: #283845;
}

.letter {
  width: 65%;
  max-width: 65%;
}

.president-portrait {
  margin-left: -100px;
  margin-bottom: -40px;
  width:200px;
  height:200px;
  border-radius: 50%;
  box-shadow: 2px 2px 15px 2px rgba(0, 0, 0, 0.2);
}

.letter-text {
  box-shadow: 3px 3px 15px 6px rgba(0, 0, 0, 0.3);
  background-color: #f9f4ee;
}

.blank-space{
  width: 100%;
  height: 10vw;
  background-color: #fff;
}

@media (max-width: 1175px){
  .nav-item{
    font-size: 14px;
  }
}

@media (max-width: 1085px){
  .nav-item{
    font-size: 12px !important;
  }
}

@media (max-width: 1025px){
  .nav-item{
    font-size: 11px; 
  }
  .title{
    padding: 0px 0px 0px 0px;
  }
  .main-title{
    font-size: 2.5rem;
  }
  .sub-title{
    font-size: 2.25rem;
  }
  #intro{
    background-position: bottom;
  }
}

@media (max-width: 768px) {
  .navbar .top-nav-collapse {
    background-image: linear-gradient(#5d697aed, #5d697ace, #5d697ab9);
  }
}
@media (min-width: 800px) and (max-width: 850px) {
  .navbar:not(.top-nav-collapse) {
    background-image: linear-gradient(#3a424fbf, #3a424f80, #3a424f00);
  }
}

